--- a/angular.json
+++ b/angular.json
@@ -20,10 +20,13 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/toastr/build/toastr.min.css",
               "node_modules/ngf-bootstrap/dist/bootstrap.min.css",
-              "src/styles.css"],
+              "src/styles.css"
+            ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/toastr/build/toastr.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
@@ -78,12 +81,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              
-            ],
-            "scripts": [
-              
-            ],
+            "styles": [],
+            "scripts": [],
             "assets": ["src/favicon.ico", "src/assets"]
           }
         },
